fix box proportions on smaller screens

--- a/assets/less/board.less
+++ b/assets/less/board.less
@@ -17,22 +17,28 @@
     width: 5.66%;
     position: relative;
     margin-right: 1%;
-    float: right;
+    float: left;
     margin-bottom: 5px;
 }
 
 
 .cell-letter {
-    line-height: 80px;
     font-size: 2rem;
     text-transform: uppercase;
+    font-size: 2.5vw;
+    display: table-cell;
+    vertical-align: middle;
+    width: 100%;
 }
 
 .cell-points {
     position: absolute;
-    left: 5px;
+    left: 2px;
     bottom: 0;
     font-size: .7rem;
+    font-size: .7vw;
+    height: 30%;
+    text-align: left;
 }
 
 .cell-content {
@@ -51,6 +57,7 @@
 
     .mui-paper-container {
         position: relative;
+        display: table;
     }
 }
 
@@ -58,7 +65,6 @@
     background-color: #f9f9f9;
     // border: 1px solid #ffffff;
     color: #f9f9f9;
-    line-height: 3;
     font-size: 1rem;
 
     .cell-content {
